[PM-#0.3]implement layout js

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- отложенное подключение js файла (defer откладывает к концу загрузки) -->
-  <script src="./js/index.js" defer></script>
+  <script type="module" src="./js/index.js" defer></script>
 </head>
 
 <body>
-  <div class="wrapper">
+  <!-- <div class="wrapper">
     <div class="container">
       <section class="form">
         <form id="form">
@@ -86,7 +86,7 @@
         </div>
       </section>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
